--- a/Experiment.html
+++ b/Experiment.html
@@ -24,7 +24,7 @@ function myFunction() {
     header.classList.remove("sticky"); }}
 </script>
 <font color=#282846 face="century gothic" size=6> <center> 
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\corona update.jpg" width = 1024 height =400><br>
+<img src="C:/Users/srija/OneDrive/Desktop/My fold/projects/corona update.jpg" width = 1024 height =400><br>
 <br>  <p style="text-align:left ;"> <font color=#282846 face="century gothic" size=6> <br><br>What is Corona?</b><br> <br></font><font color=#282846 face="century gothic" size=5>
 COVID-19 is a disease caused by a new strain of coronavirus. ‘CO’ stands for corona, ‘VI’ for virus, and ‘D’ for disease. Formerly, this disease was referred to as ‘2019 novel coronavirus’ or ‘2019-nCoV.’
 The COVID-19 virus is a new virus linked to the same family of viruses as Severe Acute Respiratory Syndrome (SARS) and some types of common cold. </font>
@@ -36,7 +36,7 @@ Older people, and people with chronic medical conditions, such as diabetes and
 possible for people of any age to be infected with the virus, but so far there are relatively few cases of COVID-19 reported among children. The virus can be fatal in rare cases, so far mainly among older people with pre-existing medica lconditions.
 </font><br><br></p><center><Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;float: center;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td>
-</tr><tr><td><a href=experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+</tr><tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 <br><br><br></body></html>
 
 
