--- a/Experiment.html
+++ b/Experiment.html
@@ -24,7 +24,7 @@ function myFunction() {
     header.classList.remove("sticky"); }}
 </script>
 <font color=#282846 face="century gothic" size=6> <center> 
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\Git\corona update.jpg" width=1024 height=400>
+<img src="https://1-am-stuck.github.io/corona%20update.jpg" width=1024 height=400>
 COVID-19 is a disease caused by a new strain of coronavirus. ‘CO’ stands for corona, ‘VI’ for virus, and ‘D’ for disease. Formerly, this disease was referred to as ‘2019 novel coronavirus’ or ‘2019-nCoV.’
 The COVID-19 virus is a new virus linked to the same family of viruses as Severe Acute Respiratory Syndrome (SARS) and some types of common cold. </font>
 <font color=#282846 face="century gothic" size=6> <br><br>How does COVID-19 spread?  </b><br> <br></font><font color=#282846 face="century gothic" size=5>
