--- a/page1.html
+++ b/page1.html
@@ -28,7 +28,7 @@ function myFunction() {
 </script>
 
 <font color=#282846 face="century gothic" size=6> <center>
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\safety.jpg" width=1024 height=400></center></h1>	
+<img src="https://1-am-stuck.github.io/safety.jpg" width=1024 height=400></center></h1>	
 <br><center>There are many steps to take to keep yourself from getting corona and spreading it to other people.
 Scroll down to see some of the most important.</p><br><br><br><center>
 1. Always wash your hands<br>
