--- a/page1.html
+++ b/page1.html
@@ -32,15 +32,15 @@ function myFunction() {
 <br><center>There are many steps to take to keep yourself from getting corona and spreading it to other people.
 Scroll down to see some of the most important.</p><br><br><br><center>
 1. Always wash your hands<br>
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\Handwash.jpg" width=400 height=340>
+<img src="https://1-am-stuck.github.io/main/mask.jpg" width=400 height=340>
 <br> 2.Always wear a mask<br>
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\mask.jpg" width=400 height=340>
+<img src="https://1-am-stuck.github.io/main/Handwash.jpg" width=400 height=340>
 <br>3.Stay at home and avoid going outside until absolutely necessary
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\house.jpg" width=450 height=400>
+<img src="https://1-am-stuck.github.io/main/house.jpg" width=450 height=400>
 <br>4.Clean and disinfect frequently touched objects and surfaces
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\Spray.jpg" width=530 height=470><br><br><br>
+<img src="https://1-am-stuck.github.io/main/Spray.jpg" width=530 height=470><br><br><br>
 <center><Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;float: center;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
