--- a/page1.html
+++ b/page1.html
@@ -32,7 +32,7 @@ function myFunction() {
 <br><center>There are many steps to take to keep yourself from getting corona and spreading it to other people.
 Scroll down to see some of the most important.</p><br><br><br><center>
 1. Always wash your hands<br>
-<img src="https://1-am-stuck.github.io/mask.jpg" width=400 height=340>
+<img src="https://1-am-stuck.github.com/mask.jpg" width=400 height=340>
 <br> 2.Always wear a mask<br>
 <img src="https://1-am-stuck.github.io/Handwash.jpg" width=400 height=340>
 <br>3.Stay at home and avoid going outside until absolutely necessary
