--- a/page2.html
+++ b/page2.html
@@ -26,23 +26,21 @@ function myFunction() {
 }
 </script>
 <font color=#282846 face="century gothic" size=6> <center>
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\vaccine.jpg" height=400 width=1024>
+<img src="https://1-am-stuck.github.io/vaccine.jpg" height=400 width=1024>
 </center></h1></font>	
 <font color=#282846 face="century gothic" size=6> 
-<br> <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:PLAYFAIR;font-size:20px;float: left;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
-</tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td>
-</tr><tr></table> <p style="text-align:right;"> The covid 19 vaccine has recently been started being distributed in India.
-Scroll below to learn about the types of vaccine and how to sign up for it.<br><br><br><center>
+<br> <center> The covid 19 vaccine has recently been started being distributed in India.
+Scroll below to learn about the types of vaccine and how to sign up for it.<br><br><br>
 There are mainly three vaccines distributed in India  - <br> 1) Covisheild <br>2)Covaxin<br>3)Sputnik<br>
 The Pfizer and Moderna's coronavirus vaccines might become available in the country during the third quarter of the 2021.
 <br><br> <b>How to apply to recieve the vaccine - </b><br><br></center> The vaccine is available in several Government
 and Private Health facilities known as CVCs(COVID Vaccination Centres)<br> <br>- You can preregister online or
 on spot at a CVC <br> - You have to check wether you are elligble for that vaccine and bring all your important documents and photo id
 <br>- after recieving the vaccine you might get a mild fever but it is not something to worry about<br>
-<center><img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\syringe.jpg" width=550 height=450>
+<center><img src="https://1-am-stuck.github.io/syringe.jpg" width=550 height=450>
 <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
  
