--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@ function myFunction() {
 }
 </script><center>
 <font color=#282846 face="century gothic" size=6> 	
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\symptom.jpg" height=400 width=1024><br>
+<img src="https://1-am-stuck.github.io/safety.jpg" height=400 width=1024><br>
 <br>  It is important to know if you the virus. Scroll down to know the common symptons<br><br>
 <b>Most common symptoms:</b><br>1)fever<br>2)dry cough<br>3)tiredness<br><br><b>Less common symptoms:</b><br>1)aches and pains<br>2)sore throat
 <br>3)diarrhoea<br>4)conjunctivitis<br>5)headache<br>6)loss of taste or smell<br>7)a rash on skin, or discolouration of fingers or toes<br><br>
