--- a/page3.html
+++ b/page3.html
@@ -33,7 +33,7 @@ function myFunction() {
 It is important to note that most people who get covid don't always need medication. It you are experiencing any of the serious symptoms go to a hospital immediatly.
 <br><br><Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
  
