--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@ function myFunction() {
 }
 </script>
 <font color=#282846 face="century gothic" size=6> <center>
-<img src="C:\Users\srija\OneDrive\Desktop\My fold\projects\hosp.jpg" height=400 width=1024>
+<img src="https://1-am-stuck.github.io/hosp.jpg" height=400 width=1024>
 <br><br> <b> How do I know if I'm covid positive? </b><br>
 You can get a COVID test or see  if you are exhibiting any of the symptoms. Rememeber not to panic if you have corona. 
 
@@ -34,7 +34,7 @@ If you are only exhibiting minor symptoms do not immediately go to a doctor but 
 <br><br><b>What is self-isolation?</B><br>Self-isolation is when you do not leave your home because you have or might have coronavirus (COVID-19).People who are in isolation should stay home until it’s safe for them to be around others. At home, anyone sick or infected should separate from others, stay in a specific “sick room” or area, and use a separate bathroom.
 <br><br> <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
  
