--- a/page4.html
+++ b/page4.html
@@ -25,14 +25,13 @@ function myFunction() {
 }
 </script>
 <font color=#282846 face="century gothic" size=6> <center>
-<img src="https://1-am-stuck.github.io/hosp.jpg" height=400 width=1024>
+<img src="https://1-am-stuck.github.io/hosp.jpg" height=400 width=1024><br><br> While over 80% of cases are mild or moderate in nature, not every patient requires hospitalization. Knowing what to do, when to seek help can fasten your recovery time and help you get back on your feet better. Hence, it is important to have a 'COVID plan' ready.
 <br><br> <b> How do I know if I'm covid positive? </b><br>
 You can get a COVID test or see  if you are exhibiting any of the symptoms. Rememeber not to panic if you have corona. 
-
 <br><br> <b> What do I do if I am covid positive?</b><br>
-If you are only exhibiting minor symptoms do not immediately go to a doctor but self isolate yourself. If the symptoms persist get a check up, if you are experiencing any of the severe symptoms go to a hospital immediately.
+Contact a doctor to decide if you have to stay at home or get hospitalized generally , if  you are only exhibiting minor symptoms do not immediately go to a hospital but self isolate yourself. If the symptoms persist get a check up, if you are experiencing any of the severe symptoms go to a hospital immediately.
 <br><br><b>What is self-isolation?</B><br>Self-isolation is when you do not leave your home because you have or might have coronavirus (COVID-19).People who are in isolation should stay home until it’s safe for them to be around others. At home, anyone sick or infected should separate from others, stay in a specific “sick room” or area, and use a separate bathroom.
-<br><br> <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
+<br><br><b>What if I am  <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
 <tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
