--- a/page3.html
+++ b/page3.html
@@ -31,8 +31,8 @@ function myFunction() {
 <br>3)diarrhoea<br>4)conjunctivitis<br>5)headache<br>6)loss of taste or smell<br>7)a rash on skin, or discolouration of fingers or toes<br><br>
 <b>Serious symptoms:</b><br>1)difficulty breathing or shortness of breath<br>2)chest pain or pressure<br>3)loss of speech or movement<br><br><br>
 It is important to note that most people who get covid don't always need medication. It you are experiencing any of the serious symptoms go to a hospital immediatly.
-<br><br>If you are exhibiting multiple symptoms and think you are positive or tested positive check out the next page. You should also buy a oxymeter to regularly check your blook oxygen level. If it is below 60 mm Hg the blood pressure is considered low and you should consider taking a COVID test.
- <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
+If you are exhibiting multiple symptoms and think you are positive or tested positive check out the next page. You should also buy a oxymeter to regularly check your blook oxygen level. If it is below 60 mm Hg the blood pressure is considered low and you should consider taking a COVID test.
+<br><Br> <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
 <tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
