--- a/Experiment.html
+++ b/Experiment.html
@@ -26,7 +26,8 @@ function myFunction() {
 <font color=#282846 face="century gothic" size=6> <center> 
 <img src="https://1-am-stuck.github.io/corona%20update.jpg" width=1024 height=400><br><br>
 COVID-19 is a disease caused by a new strain of coronavirus. ‘CO’ stands for corona, ‘VI’ for virus, and ‘D’ for disease. Formerly, this disease was referred to as ‘2019 novel coronavirus’ or ‘2019-nCoV.’
-The COVID-19 virus is a new virus linked to the same family of viruses as Severe Acute Respiratory Syndrome (SARS) and some types of common cold. </font>
+The COVID-19 virus is a new virus linked to the same family of viruses as Severe Acute Respiratory Syndrome (SARS) and some types of common cold. <br>
+ This website is a place to get the latest information on how to protect yourself from covid and what to do if you have it.</font>
 <font color=#282846 face="century gothic" size=6> <br><br>How does COVID-19 spread?  </b><br> <br></font><font color=#282846 face="century gothic" size=5>
 The virus is transmitted through direct contact with respiratory droplets of an infected person (generated through coughing and sneezing). Individuals can also be infected from and touching surfaces
 contaminated with the virus and touching their face (e.g., eyes, nose, mouth)</font>
