--- a/page1.html
+++ b/page1.html
@@ -31,8 +31,8 @@ function myFunction() {
 <img src="https://1-am-stuck.github.io/safety.jpg" width=1024 height=400></center></h1>	
 <br><center>There are many steps to take to keep yourself from getting corona and spreading it to other people.
 Scroll down to see some of the most important.</p><br><br><br><center>
-1. Always wash your hands<br>
-<img src="https://1-am-stuck.github.io/Handwash.jpg" width=400 height=340> You should use an antiviral handsoap for the best result <br>
+1. Always wash your hands<br>You should use an antiviral handsoap for the best result <br>
+<img src="https://1-am-stuck.github.io/Handwash.jpg" width=400 height=340> 
 <br> 2.Always wear a mask<br> It is also advisable to wear two masks instead of one due to the recent starting of the second wave.<br>
 <img src="https://1-am-stuck.github.io/mask.jpg" width=400 height=340>
 <br>3.Stay at home and avoid going outside until absolutely necessary<br> it is important to quarantine yourself even if there isn't a lockdown<br>
