--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@ on spot at a CVC <br> - You have to check wether you are elligble for that vacci
 <center><img src="https://1-am-stuck.github.io/syringe.jpg" width=550 height=450>
 <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=coronaupates.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
  
