--- a/page4.html
+++ b/page4.html
@@ -40,7 +40,7 @@ Proning a medically approved position  in which patients are made to lie on thei
 If your blood oxygen level is below 94, you should try proning at home to increase it.<a href="https://www.youtube.com/watch?v=3kv-42xU8GA"> Here is a helpful video on how to do this</a>
 <br><Br><Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=coronaupates.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
  
