--- a/coronaupdates.html
+++ b/coronaupdates.html
@@ -36,7 +36,7 @@ Older people, and people with chronic medical conditions, such as diabetes and
 possible for people of any age to be infected with the virus, but so far there are relatively few cases of COVID-19 reported among children. The virus can be fatal in rare cases, so far mainly among older people with pre-existing medica lconditions.
 </font><br><br></p><center><Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;float: center;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td>
-</tr><tr><td><a href=Experiment.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+</tr><tr><td><a href=coronaupdates.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 <br><br><br></body></html>
 
 
