--- a/page2.html
+++ b/page2.html
@@ -33,8 +33,8 @@ function myFunction() {
 Scroll below to learn about the types of vaccine and how to sign up for it.<br><br><br>
 There are mainly three vaccines distributed in India  - <br> 1) Covisheild <br>2)Covaxin<br>3)Sputnik<br>
 The Pfizer and Moderna's coronavirus vaccines might become available in the country during the third quarter of the 2021.
-<br><br> <b>How to apply to recieve the vaccine - </b><br><br></center> The vaccine is available in several Government
-and Private Health facilities known as CVCs(COVID Vaccination Centres)<br> <br>- You can preregister online or
+<br><br> <b>How to apply to recieve the vaccine - </b><br><br><center> The vaccine is available in several Government
+  and Private Health facilities known as CVCs(COVID Vaccination Centres)<br> <br></center>- You can preregister online or
 on spot at a CVC <br> - You have to check wether you are elligble for that vaccine and bring all your important documents and photo id
 <br>- after recieving the vaccine you might get a mild fever but it is not something to worry about<br>
 <center><img src="https://1-am-stuck.github.io/syringe.jpg" width=550 height=450>
