--- a/page3.html
+++ b/page3.html
@@ -34,7 +34,7 @@ It is important to note that most people who get covid don't always need medicat
 If you are exhibiting multiple symptoms and think you are positive or tested positive check out the next page. You should also buy a oxymeter to regularly check your blook oxygen level. If it is below 80 mm Hg the blood pressure is considered low and you should consider taking a COVID test.
 <br><Br> <Table border=1 bgcolor=#282846 style="color:#d8ebe4;font-family:"century gothic";font-size:20px;"> <tr><th >Links to other pages</th></tr><tr><td><a href=page1.html style="color: #d8ebe4">Safety Measures</a></td>
 </tr><tr><td><a href=page2.html style="color: #d8ebe4">Vaccine situation</a></td></tr><tr><td><a href=page3.html style="color: #d8ebe4">Common symptons</a></td></tr><tr><td><a href=page4.html style="color: #d8ebe4">What to do if you are covid positive</a></td></tr>
-<tr><td><a href=coronaupates.html style="color: #d8ebe4">Main Page</a></td></tr></table>
+<tr><td><a href=coronaupdates.html style="color: #d8ebe4">Main Page</a></td></tr></table>
 
 
  
