--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@ a:link {color: white;background-color: transparent;text-decoration: none;font-fa
 .sticky + .content {
   padding-top: 102px;
 </style>
-<title>Experiment</title></head>
+<title></title></head>
 <body>
 <div class="header" id="myHeader">
   <h2><center><Font face="century gothic" size= 4 >Links to other pages <a href=page1.html style="color:white";"font-family:Century Gothic;">  -Safety Measures- </a><a href=page2.html style="color: white"font-family:Century Gothic;>  -Vaccine Situation- </a><a href=page3.html style="color: white"font-family:Century Gothic;>  -Common Symptoms- </a><a href=page4.html style="color: white"font-family:Century Gothic;>  -What to do if you are covid positive- </a>
